test/flowanalysis/jplevyak/badreturn.good
 called from 0 in operator at prelude.v:0
 called from 4 in __init at assign2.v:1
__init::self(assign2.v:1) ( C (assign2.v:1) )
badreturn.v:2: 'q' has no type
badreturn.v:2: near 'q' unmatched type 'tuple'
badreturn.v:3: expression has no type
badreturn.v:3: expression has no type
badreturn.v:3: illegal call argument type expression illegal: ( tuple ) 
badreturn.v:3: unresolved call 'operator'
badreturn.v:3: unresolved call 'print'
error: expression has no type
f::c2(assign2.v:3) ( C (assign2.v:1) )
fail: fatal error, program does not type
function __init assign2.v:1
function __init assign2.v:1
function f assign2.v:3
globals
new::a(prelude.v:0) ( C (assign2.v:1) )
new::o(prelude.v:0) ( C (assign2.v:1) )
operator::a(prelude.v:0) ( C (assign2.v:1) )
operator::a(prelude.v:0) ( C (assign2.v:1) )
operator::a(prelude.v:0) ( C (assign2.v:1) )
operator::a(prelude.v:0) ( int32 )
operator::b(prelude.v:0) ( __init )
operator::b(prelude.v:0) ( c )
operator::b(prelude.v:0) ( d )
operator::b(prelude.v:0) ( int32 )
print::a(prelude.v:0) ( int32 )
system::__init(prelude.v:0) ( __init )
system::null(prelude.v:0) ( null )
user::C(assign2.v:1) ( C (assign2.v:1) )
user::__init(assign2.v:1) ( __init (assign2.v:1) )
user::c1(assign2.v:2) ( C (assign2.v:1) )
